fix table spacing, sizing, and positioning errors on urls.tsx

--- a/src/DevTool/App.css
+++ b/src/DevTool/App.css
@@ -1,33 +1,25 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  /* text-align: center; */
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-td, tr {
-  padding-right: 10px;
-  padding-left: 10px;
-  padding-bottom: 20px;
+td, th {
+  padding: 15px 20px;
   text-align: center;
-  /* border: 1px black solid; */ /* for testing the spacing and alignment */
 }
 
 td {
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 
-
-/* for testing the spacing and alignment
-/* th {
-  padding-bottom: 50px;
-  border: 1px black solid;
+/* table {
+  border-collapse: collapse;
 } */
+
+/* tr:nth-child(even) {
+  background-color: #f2f2f2;
+} */
+
+.bg-gray-950 {
+  background-color: #1a1a1a;
+}
+
+.bg-gray-800 {
+  background-color: #333;
+}
+
